# Car-Rental

./: Car Rental.txt  car rental.docx
CarRental/: CarRental.sln
CarRental/CarRental/: Validation.cs
CarRental/CarRental/CarRental.Core/: Mapping.cs  MappingProfile.cs
CarRental/CarRental/CarRental.Core/DTOs/: CarDto.cs  CollectionPointDto.cs  InvitationDto.cs  UserDto.cs
CarRental/CarRental/CarRental.Data/: CarRental.Data.csproj  DataContext.cs
CarRental/CarRental/CarRental.Service/: CarService.cs  CollectionPointService.cs  InvitationService.cs  UserService.cs
CarRental/CarRental/CarRental.api/: CarRental.api.csproj  MappingProfilePostModel.cs  Program.cs
CarRental/CarRental/Controllers/: CarController.cs  CollectionPointController.cs  InvitstionController.cs  UserController.cs
CarRental/CarRental/Entity/: Car.cs  CollectionPoint.cs  DataContext.cs  DataContextManager.cs  Invitation.cs  User.cs
CarRental/CarRental/Properties/: launchSettings.json
CarRental/CarRental/servises/: Car.cs  CarServise.cs  CollectionPoint.cs  CollectionPointServise.cs  Invitation.cs  InvitationServise.cs  User.cs  UserServise.cs
CarRental/TestController/: TestController.csproj  UnitTest1.cs
py/: Dockerfile  INSTRUCTIONS.md  candidate_scorecard.csv  pyproject.toml
py/vessel_api_client/vessel_api_client/: __init__.py  client.py
py/vessel_service/: README.md  main.py  models.py  storage.py
py/vessel_service/routers/: activities.py  vessels.py
py/vessel_service/tests/: test_api.py
py/vessel_streamlit_app/: app.py
(+30 files in other folders)
