[tool.poetry]
name = "windward-python-test"
version = "1.0.0"
description = "A Vessel Activity Tracking API and Streamlit app"
authors = ["Your Name <your-email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
streamlit = "^1.0"
uplink = "^0.6"
requests = "^2.25"
altair = "^4.0"
fastapi = "^0.111"
numpy="1.26.0"
uvicorn = {extras = ["standard"], version = "^0.29"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
